Agregado el titulo y arreglos en el estilo del formulario

--- a/src/App.css
+++ b/src/App.css
@@ -132,3 +132,10 @@
   font-family: 'Anton', sans-serif;
 }
 
+.form-title{
+  font-size: 30px;
+  font-family: 'Anton', sans-serif;
+  margin-bottom: 2%;
+  margin-top:5%;
+}
+
